--- a/bio/biodata.html
+++ b/bio/biodata.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
-	<link rel="shortcut icon" href="images/ifini.png" type="image/x-icon">
+	<link rel="shortcut icon" href="/images/ifini.png" type="image/x-icon">
 	<!-- <link rel="shortcut icon" href="https://retohercules.com/images/anime-cat-transparent.png" type="image/x-icon"> -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
